More fixes, oops could have caught these pre-release but its ok

--- a/til/2023-06-14T22:27:17Z.md
+++ b/til/2023-06-14T22:27:17Z.md
@@ -26,10 +26,11 @@ def api_options; end
 ```
 
 Without all the Sorbet stuff in the `sig` that's an empty method definition which would
-just return `nil` everytime.
+just return `nil` everytime. Without Sorbet we'd expect `OurClass#api_options` to return
+nil since this version would be the last one defined.
 
-Sorbet is doing the 'right' thing and calling the actual implementation
-from our base class.! It kind of has to, or else it's interfaces would
+However, Sorbet is doing the 'right' thing and calling the actual implementation
+from our base class! It kind of has to, or else it's interfaces would
 be hard to work with.
 But its good to confirm, and write down for next time I run into this!
 
