Do some formatting

--- a/past_streams/2022-08-21.md
+++ b/past_streams/2022-08-21.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Exploring Monte Carlo Algorithm with Rust | BattleSnake Gaming Live Stream"
+title: "Exploring Monte Carlo Algorithm with Rust | BattleSnake Gaming Live Stream"
 date: 2022-08-21
 s3_url: "raw_recordings/2022/2022-08-21 12-04-16.mkv"
-youtube_url: ""
 ---
 
 Description:
