--- a/past_streams/2022-10-09.md
+++ b/past_streams/2022-10-09.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Enigmatic Coding Journey with Corey in Rust"
+title: "Enigmatic Coding Journey with Corey in Rust"
 date: 2022-10-09
 s3_url: "raw_recordings/2022/2022-10-09 12-00-42.mkv"
-youtube_url: ""
 ---
 
 Description:
