--- a/past_streams/2022-10-16.md
+++ b/past_streams/2022-10-16.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "The Soothing Sounds of Coding: Rust Programming Rhythms"
+title: "The Soothing Sounds of Coding: Rust Programming Rhythms"
 date: 2022-10-16
 s3_url: "raw_recordings/2022/2022-10-16 12-00-40.mkv"
-youtube_url: ""
 ---
 
 Description:
