--- a/past_streams/2022-11-01.md
+++ b/past_streams/2022-11-01.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Rust Coding Session with Coreyja: Deep Dive into Programming"
+title: "Rust Coding Session with Coreyja: Deep Dive into Programming"
 date: 2022-11-01
 s3_url: "raw_recordings/2022/2022-11-01 19-56-17.mkv"
-youtube_url: ""
 ---
 
 Description:
