--- a/past_streams/2022-11-22.md
+++ b/past_streams/2022-11-22.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Rust Coding Sessions: Live Stream with Coreyja"
+title: "Rust Coding Sessions: Live Stream with Coreyja"
 date: 2022-11-22
 s3_url: "raw_recordings/2022/2022-11-22 19-59-36.mkv"
-youtube_url: ""
 ---
 
 Description:
