--- a/past_streams/2022-12-05.md
+++ b/past_streams/2022-12-05.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Building a Rock Paper Scissors Game in Rust | Advent of Code Challenge"
+title: "Building a Rock Paper Scissors Game in Rust | Advent of Code Challenge"
 date: 2022-12-05
 s3_url: "raw_recordings/2022/2022-12-05 09-48-57.mkv"
-youtube_url: ""
 ---
 
 Description:
