--- a/past_streams/2022-12-07.md
+++ b/past_streams/2022-12-07.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Rust Coding Mastery: Solving the Advent of Code Day 4 Challenge - Live Stream with Coreyja"
+title: "Rust Coding Mastery: Solving the Advent of Code Day 4 Challenge - Live Stream with Coreyja"
 date: 2022-12-07
 s3_url: "raw_recordings/2022/2022-12-07 19-54-01.mkv"
-youtube_url: ""
 ---
 
 Description: Join seasoned software developer, Coreyja, in this immersive coding live stream recorded on December 7, 2022. See how Corey tackles Day 4 of the renowned Advent of Code Challenge using Rust! In this video, the challenge revolves around helping elves organize their assigned camp sections.
