--- a/past_streams/2022-12-10.md
+++ b/past_streams/2022-12-10.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Perfecting the Treehouse Project: Deep-Dive Coding Session in Rust | Coreyja Live Stream"
+title: "Perfecting the Treehouse Project: Deep-Dive Coding Session in Rust | Coreyja Live Stream"
 date: 2022-12-10
 s3_url: "raw_recordings/2022/2022-12-10 11-02-46.mkv"
-youtube_url: ""
 ---
 
 Description:
