--- a/past_streams/2022-12-12.md
+++ b/past_streams/2022-12-12.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Simulating a Cathode Ray Tube with Rust | Live Coding Session with Corey"
+title: "Simulating a Cathode Ray Tube with Rust | Live Coding Session with Corey"
 date: 2022-12-12
 s3_url: "raw_recordings/2022/2022-12-12 21-09-05.mkv"
-youtube_url: ""
 ---
 
 Description:
