--- a/past_streams/2022-12-14.md
+++ b/past_streams/2022-12-14.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Experience the Rhythm of Coding with Rust | A Musical Coding Journey"
+title: "Experience the Rhythm of Coding with Rust | A Musical Coding Journey"
 date: 2022-12-14
 s3_url: "raw_recordings/2022/2022-12-14 21-49-12.mkv"
-youtube_url: ""
 ---
 
 Description:
