--- a/past_streams/2022-12-28.md
+++ b/past_streams/2022-12-28.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Unraveling Packet Sorting in Rust | Advent of Code 2022 - Day 13 "
+title: "Unraveling Packet Sorting in Rust | Advent of Code 2022 - Day 13"
 date: 2022-12-28
 s3_url: "raw_recordings/2022/2022-12-28 22-04-46.mkv"
-youtube_url: ""
 ---
 
 Description:
