--- a/past_streams/2023-01-09.md
+++ b/past_streams/2023-01-09.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Exploring Cave Physics: A Sand Simulation in Rust"
+title: "Exploring Cave Physics: A Sand Simulation in Rust"
 date: 2023-01-09
 s3_url: "raw_recordings/2023/2023-01-09 21-41-38.mkv"
-youtube_url: ""
 ---
 
 Description:
