--- a/past_streams/2023-02-05.md
+++ b/past_streams/2023-02-05.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Coding Odyssey With Rust "
+title: "Coding Odyssey With Rust"
 date: 2023-02-05
 s3_url: "raw_recordings/2023/2023-02-05 12-01-15.mkv"
-youtube_url: ""
 ---
 
 Description:
