--- a/past_streams/2023-02-19.md
+++ b/past_streams/2023-02-19.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Immersive Coding Session with Rust by Coreyja | Live-stream Highlights"
+title: "Immersive Coding Session with Rust by Coreyja | Live-stream Highlights"
 date: 2023-02-19
 s3_url: "raw_recordings/2023/2023-02-19 12-00-54.mkv"
-youtube_url: ""
 ---
 
 Description:
