--- a/past_streams/2023-02-26.md
+++ b/past_streams/2023-02-26.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Rust Programming Language - Deep Dive with Corey"
+title: "Rust Programming Language - Deep Dive with Corey"
 date: 2023-02-26
 s3_url: "raw_recordings/2023/2023-02-26 12-01-39.mkv"
-youtube_url: ""
 ---
 
 Description:
