--- a/past_streams/2023-04-09.md
+++ b/past_streams/2023-04-09.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Ambient Coding Journey with Corey: A Deep Dive into Rust"
+title: "Ambient Coding Journey with Corey: A Deep Dive into Rust"
 date: 2023-04-09
 s3_url: "raw_recordings/2023/2023-04-09 12-00-57.mkv"
-youtube_url: ""
 ---
 
 Description:
