--- a/past_streams/2023-05-06.md
+++ b/past_streams/2023-05-06.md
@@ -1,5 +1,5 @@
 ---
-title: "Title: Epic Battles in Battle Snake Community Tournament #2 - Round 2 Analysis with Coreyja"
+title: "Epic Battles in Battle Snake Community Tournament #2 - Round 2 Analysis with Coreyja"
 date: 2023-05-06
 s3_url: "raw_recordings/2023/2023-05-06 12-02-09.mkv"
 youtube_url: "https://youtu.be/5uw87WsrGbM"
