--- a/past_streams/2023-05-17.md
+++ b/past_streams/2023-05-17.md
@@ -1,8 +1,7 @@
 ---
-title: "Exploring Rust: Blog Development with Anchor Links | By Coreyja" "
+title: "Exploring Rust: Blog Development with Anchor Links | By Coreyja"
 date: 2023-05-17
 s3_url: "raw_recordings/2023/2023-05-17 19-01-16.mkv"
-youtube_url: ""
 ---
 
 Dive into Rust with Coreyja's blog development journey! Recorded on 2023-05-17, this live-stream session explores the addition of anchor links to blog header posts. From examining GitHub issues to successfully implementing this key feature up to level 6 headers, Corey navigates through the markdown code to overcome challenges and achieve the desired result. Enjoy fascinating discussion points, interactions with viewers, and gain technical insights throughout the process. Click play for a hands-on Rust experience!
