--- a/past_streams/2023-06-07.md
+++ b/past_streams/2023-06-07.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Mastering Python and Rust: Fixing Battle Snake's Big Bug | Coreyja's Live Coding Session"
+title: "Mastering Python and Rust: Fixing Battle Snake's Big Bug | Coreyja's Live Coding Session"
 date: 2023-06-07
 s3_url: "raw_recordings/2023/2023-06-07 19-08-00.mkv"
-youtube_url: ""
 ---
 
 Description:
