--- a/past_streams/2022-07-10.md
+++ b/past_streams/2022-07-10.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Exploring Battle Snake Game Analytics with Sherlock: A Rust Built Tool by Coreyja"
+title: "Exploring Battle Snake Game Analytics with Sherlock: A Rust Built Tool by Coreyja"
 date: 2022-07-10
 s3_url: "raw_recordings/2022/2022-07-10 12-01-26.mkv"
-youtube_url: ""
 ---
 
 Description:
