--- a/past_streams/2022-10-18.md
+++ b/past_streams/2022-10-18.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Chill Coding with Corey - Meditative Rust Development"
+title: "Chill Coding with Corey - Meditative Rust Development"
 date: 2022-10-18
 s3_url: "raw_recordings/2022/2022-10-18 20-00-18.mkv"
-youtube_url: ""
 ---
 
 Description:
