--- a/past_streams/2023-01-22.md
+++ b/past_streams/2023-01-22.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Unraveling Game Logic and Debugging with Rust | Epic Live Coding Session"
+title: "Unraveling Game Logic and Debugging with Rust | Epic Live Coding Session"
 date: 2023-01-22
 s3_url: "raw_recordings/2023/2023-01-22 12-06-18.mkv"
-youtube_url: ""
 ---
 
 Description:
