--- a/past_streams/2023-02-13.md
+++ b/past_streams/2023-02-13.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Ambient Coding Session with Coreyja in Rust | Peaceful Programming Live Stream"
+title: "Ambient Coding Session with Coreyja in Rust | Peaceful Programming Live Stream"
 date: 2023-02-13
 s3_url: "raw_recordings/2023/2023-02-13 15-46-57.mkv"
-youtube_url: ""
 ---
 
 Description:  
