--- a/past_streams/2023-02-22.md
+++ b/past_streams/2023-02-22.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Unfolding Creativity: A soothing coding session with Coreyja"
+title: "Unfolding Creativity: A soothing coding session with Coreyja"
 date: 2023-02-22
 s3_url: "raw_recordings/2023/2023-02-22 18-39-40.mkv"
-youtube_url: ""
 ---
 
 Description:
