--- a/past_streams/2023-03-12.md
+++ b/past_streams/2023-03-12.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Upbeat Coding Vibes with Coreyja | An Inspirational Rust Coding Stream"
+title: "Upbeat Coding Vibes with Coreyja | An Inspirational Rust Coding Stream"
 date: 2023-03-12
 s3_url: "raw_recordings/2023/2023-03-12 12-07-24.mkv"
-youtube_url: ""
 ---
 
 Description:
