--- a/past_streams/2023-03-22.md
+++ b/past_streams/2023-03-22.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: "Mastering Distributed Systems in Rust: Fly.io Gossip Glomers Challenge - Live Coding"
+title: "Mastering Distributed Systems in Rust: Fly.io Gossip Glomers Challenge - Live Coding"
 date: 2023-03-22
 s3_url: "raw_recordings/2023/2023-03-22 19-02-04.mkv"
-youtube_url: ""
 ---
 
 Description:
