--- a/past_streams/2023-05-28.md
+++ b/past_streams/2023-05-28.md
@@ -1,8 +1,7 @@
 ---
-title: "Title: Mysterious Rhythms: Dive into Rust Coding "
+title: "Mysterious Rhythms: Dive into Rust Coding"
 date: 2023-05-28
 s3_url: "raw_recordings/2023/2023-05-28 12-12-57.mkv"
-youtube_url: ""
 ---
 
 Description: Join Corey on an action-packed journey into the world of Rust programming recorded on May 28, 2023. Uncover the twists and turns of Rust development as we navigate through this captivating live stream. Only offering a glimpse of a mesmerizing musical segment, this video will leave you eager for more. Tune in for relentless mystery, exploration, and coding mastery.
