A few more videos

--- a/past_streams/2023-06-18.md
+++ b/past_streams/2023-06-18.md
@@ -1,7 +1,8 @@
 ---
-title: "Pushing Boundaries with Rust: A Deep Dive into Blog Analytics and Observability | Coreyja Live Stream"
+title: "A Deep Dive into Rust Blog Analytics and Observability | coreyja Live Stream"
 date: 2023-06-18
 s3_url: "raw_recordings/2023/2023-06-18 12-03-34.mkv"
+youtube_url: "https://youtu.be/gm3AcT3CSOU"
 ---
 
 Dive into the world of Rust and analytics with Corey in this eye-opening live stream recorded on June 18, 2023. Watch as he strategically engineers a sophisticated blog, addressing the critical issue of ad analytics and page view insight. We explore SQLite and Honeycomb, a platform for observability data to create dashboards and gain insights into the blog's popularity. Corey walks us through troubleshooting tracing issues and delves into user-agent information capture. This exciting case study uncovers data possibilities you might not have imagined before. Ready to push your technical understanding to new heights? Then this video is a must-watch for you.
