Fix some long titles and validate against the length

--- a/past_streams/2022-05-15.md
+++ b/past_streams/2022-05-15.md
@@ -1,5 +1,5 @@
 ---
-title: "Implementing the Monte Carlo Tree Search Algorithm with Rust: Cracking Code and Creating Visualizations"
+title: "Implementing the Monte Carlo Tree Search Algorithm with Rust | coreyja Live Stream"
 date: 2022-05-15
 s3_url: "raw_recordings/2022/2022-05-15 11-58-52.mkv"
 ---
