--- a/past_streams/2022-07-03.md
+++ b/past_streams/2022-07-03.md
@@ -1,5 +1,5 @@
 ---
-title: "Mastering Battle Snake: Deep Dive into AI Strategies and Debugging | Rust Coding Session with Coreyja"
+title: "Deep Dive into Battlesnake AI Strategies and Debugging | Rust Live Coding with Corey"
 date: 2022-07-03
 s3_url: "raw_recordings/2022/2022-07-03 13-05-42.mkv"
 ---
