--- a/past_streams/2022-07-31.md
+++ b/past_streams/2022-07-31.md
@@ -1,5 +1,5 @@
 ---
-title: "Mastering BattleSnake AI Strategies with Rust | Coreyja Live Stream Review"
+title: "BattleSnake AI Strategies in Rust | Coreyja Live Stream"
 date: 2022-07-31
 s3_url: "raw_recordings/2022/2022-07-31 14-01-54.mkv"
 ---
