--- a/past_streams/2023-01-01.md
+++ b/past_streams/2023-01-01.md
@@ -1,5 +1,5 @@
 ---
-title: "Mastering BattleSnake AI with Rust Programming: Debugging & Enhancing Performance | Live Stream Recap"
+title: "BattleSnake AI with Rust: Debugging & Enhancing Performance | coreyja Live Stream"
 date: 2023-01-01
 s3_url: "raw_recordings/2023/2023-01-01 12-01-20.mkv"
 youtube_url: "https://youtu.be/Xu9oOEOnkBw"
