--- a/past_streams/2023-04-23.md
+++ b/past_streams/2023-04-23.md
@@ -1,5 +1,5 @@
 ---
-title: "Interactive Rust Coding: Building Snake GPT Chatbot and WebAssembly Integration | Battle Snake Game Session"
+title: "Interactive Rust Coding: Building Snake GPT Chatbot and WebAssembly Integration"
 date: 2023-04-23
 s3_url: "raw_recordings/2023/2023-04-23 12-02-47.mkv"
 ---
