--- a/past_streams/2023-03-26.md
+++ b/past_streams/2023-03-26.md
@@ -2,6 +2,7 @@
 title: "Preparing for The Battle Snake Tournament: Live Coding in Rust | Coreyja Stream"
 date: 2023-03-26
 s3_url: "raw_recordings/2023/2023-03-26 12-07-30.mkv"
+youtube_url: "https://youtu.be/5rRtjQaCpS4"
 ---
 
 Watch Corey, an experienced Rust developer and member of the Battle Snake core team, as he prepares for the upcoming Battle Snake community tournament. Recorded on March 26, 2023, this livestream focuses on making substantial improvements to the game's home website and addressing various programming challenges. Peek into Corey's coding world as he talks about the game mechanisms, discusses future developments, and tweaks the documentation for the big day. Be part of the interactive journey where he communicates with his audience in real-time, answering their queries and taking their suggestions. Don't miss the chance to witness the creative process unfold right in front of your eyes. Get some handy Rust programming tips, keep up with the Battle Snake community, or just come for an enjoyable time with Corey!
