Upload some streams

--- a/past_streams/2022-12-04.md
+++ b/past_streams/2022-12-04.md
@@ -2,6 +2,7 @@
 title: "Rust Coding Challenges: Building the Battle Snake AI with Coreyja"
 date: 2022-12-04
 s3_url: "raw_recordings/2022/2022-12-04 12-01-32.mkv"
+youtube_url: "https://youtu.be/UrwCzBimHnE"
 ---
 
 Join coreyja as he engages in live Rust programming, bravely tackling coding challenges in the Battle Snake project. Recorded on December 4, 2022, watch Corey as he painstakingly adds state to his snake, Hobbs, helping it remember turn-by-turn actions and enhancing its gameplay. Dive into the complexities of handling technical issues related to lifetimes and cloning, upgrading to newer versions of Rust, and debugging tracing issues. Follow him as he deals with high memory usage problems and discusses potential solutions. Be part of his journey as he tackles issues with Honeycomb logging and deploying code changes to his server. You will not want to miss coreyja's blend of technical know-how, problem-solving skills, and perseverance to improve his Battle Snake project. Whether you're keen on Rust programming, a fan of Battle Snake, or just love a good coding struggle, there's something for you in this live stream. Tune in and learn from the experience!
