--- a/past_streams/2023-01-29.md
+++ b/past_streams/2023-01-29.md
@@ -2,6 +2,7 @@
 title: "Deep Dive Into Battle Snake API Updates and Game Rule Enhancements | Rust Coding"
 date: 2023-01-29
 s3_url: "raw_recordings/2023/2023-01-29 12-00-53.mkv"
+youtube_url: "https://youtu.be/i21KK7yEkl0"
 ---
 
 Join Corey, a seasoned Rust coder, as he delves into the intricacies of the Battle Snake API updates and game rule modifications. Recorded live on January 29, 2023, Corey shares insights on everything from varying healing and damage values to the differentiation of game rules and maps. He facilitates a thoughtful discussion on the potential for map stacking and the need for a new API. Bonus content includes a sneak peek into the proposed community-led tournament using the 'Snail Mode' map. Don't forget to join the Battle Snake Discord community for more!
