--- a/past_streams/2023-02-08.md
+++ b/past_streams/2023-02-08.md
@@ -2,6 +2,7 @@
 title: "Exploring OpenAPI with Rust: A Deep Dive into Code Refactoring | Corey's Live Stream, Feb 2023"
 date: 2023-02-08
 s3_url: "raw_recordings/2023/2023-02-08 18-06-31.mkv"
+youtube_url: "https://youtu.be/ldK3wm0ZLF8"
 ---
 
 "Join Corey's live coding session, recorded on Feb 8, 2023, as he unravels the mysteries of OpenAPI specifications using Rust programming language. Watch him overcome errors and troubleshoot his way through this informative stream. Corey introduces a new Rust crate called 'OpenAPI Gen', perfect for parsing query parameters from OpenAPI files, and adds another layer of depth to your understanding of Rust programming. Listen to him discuss future features like handling null values and supporting headers. Enjoy Corey's interaction with viewers from the BattleSnake Discord, covering a diverse range of topics from BattleSnake experiences to the intricacies of Rust programming. Be sure not to miss his future streams and events as he continues working on his exciting projects!"
