Upload more, only 9 to go!

--- a/past_streams/2022-11-08.md
+++ b/past_streams/2022-11-08.md
@@ -2,6 +2,7 @@
 title: "Building a Responsive Website with Rust: Updates on Project 'Peak'"
 date: 2022-11-08
 s3_url: "raw_recordings/2022/2022-11-08 20-01-37.mkv"
+youtube_url: "https://youtu.be/JkJPXehqWB8"
 ---
 
 Join host Corey as he delves into the nitty gritty of web development. Recorded on November 8, 2022, this live stream video captures Corey's journey as he works on "Peak," a web project developed entirely in Rust. Watch as he constructs a responsive landing page complete with a scrolling footer, all stylized using CSS properties such as Flexbox and Tailwind CSS. Listen as Corey ponders the challenges of integrating SVG icons and wrestles with deciding the best way to commit these assets to the repository. Also, stay tuned for a hint of what's next: Battle Snake! Don't miss out on an opportunity to learn from an adept coder and join in on the conversation with other viewers.
