Change some descriptions

--- a/past_streams/2022-07-12.md
+++ b/past_streams/2022-07-12.md
@@ -4,4 +4,4 @@ date: 2022-07-12
 s3_url: "raw_recordings/2022/2022-07-12 19-00-19.mkv"
 ---
 
-Description: Join streamer Coreyja as he embarks on a lively exploration of the pen-testing game "Hack the Box" on July 12, 2022. Throughout the session, Corey navigates the ins and outs of using Nmap, SMB client, and other tools to gain access to a target machine, all while coding in Rust. From the basic setup of a virtual machine to attempting command line exploits with the aim of finding a hidden flag.txt file, this video offers a real-time glimpse into the trials, errors, and triumphs of hands-on cyber security practice. Watch Corey think on his feet, troubleshoot obstacles, and persist in the spirit of the game. This stream encourages learning through experience and does not shy away from the messy process of trial and error. Be sure to hit the follow button on Twitter for future streams and further updates!
+Join streamer Coreyja as he embarks on a lively exploration of the pen-testing game "Hack the Box" on July 12, 2022. Throughout the session, Corey navigates the ins and outs of using Nmap, SMB client, and other tools to gain access to a target machine. From the basic setup of a virtual machine to attempting command line exploits with the aim of finding a hidden flag.txt file, this video offers a real-time glimpse into the trials, errors, and triumphs of hands-on cyber security practice. Watch Corey think on his feet, troubleshoot obstacles, and persist in the spirit of the game. This stream encourages learning through experience and does not shy away from the messy process of trial and error. Be sure to hit the subscribe button for future streams and further updates!
