Upload the last 4 videos

--- a/past_streams/2022-07-10.md
+++ b/past_streams/2022-07-10.md
@@ -2,6 +2,7 @@
 title: "Exploring Battle Snake Game Analytics with Sherlock: A Rust Built Tool by Coreyja"
 date: 2022-07-10
 s3_url: "raw_recordings/2022/2022-07-10 12-01-26.mkv"
+youtube_url: "https://youtu.be/UIHsNvvC4og"
 ---
 
 In this fascinating live stream from July 10, 2022, Coreyja gives an in-depth introduction and demonstration of Sherlock, a unique tool developed to analyze the game-play of Battle Snake. Together we dive into the nitty-gritty of this innovative investigation tool that helps identify game-changing turns and decision points.
