--- a/past_streams/2022-05-15.md
+++ b/past_streams/2022-05-15.md
@@ -2,6 +2,7 @@
 title: "Implementing the Monte Carlo Tree Search Algorithm with Rust | coreyja Live Stream"
 date: 2022-05-15
 s3_url: "raw_recordings/2022/2022-05-15 11-58-52.mkv"
+youtube_url: "https://youtu.be/31LdHO1o4F4"
 ---
 
 Join Corey (coreyja) as he deep-dives into Rust, a robust and efficient multi-paradigm programming language. Recorded on May 15th, 2022, this session showcases Corey's endeavours in implementing and perfecting the Monte Carlo tree search algorithm, a fascinating component in coding theory.
