--- a/past_streams/2023-08-23.md
+++ b/past_streams/2023-08-23.md
@@ -1,5 +1,5 @@
 ---
-title: "Exploring Rust: BYTE SPEAKS!! | Live Coding with coreyja | Voice Transcription and Bot Programming in Rust"
+title: "BYTE SPEAKS!! | Live Coding with coreyja | Voice Transcription and Bot Programming in Rust"
 date: 2023-08-23
 youtube_url: https://youtu.be/BUZ9ien9r2U
 ---
