Get project md created and link all caje streams to it

--- a/past_streams/2023-08-20.md
+++ b/past_streams/2023-08-20.md
@@ -2,6 +2,7 @@
 title: "Exploring Rust: Crafting a CDN from Scratch - Part 1 | Live Coding Session"
 date: 2023-08-20
 youtube_url: https://youtu.be/4DKm8lEYQ6o
+project: caje
 ---
 
 Join in as Coreyja dives into the world of Rust and works on creating an advanced Content Delivery Network (CDN) from scratch in this enlightening coding session recorded on August 20th, 2023.
