--- a/past_streams/2023-08-30.md
+++ b/past_streams/2023-08-30.md
@@ -2,6 +2,7 @@
 title: "Exploring Advanced Rust: Building a CDN - Part 2 | Live Coding with Coreyja"
 date: 2023-08-30
 youtube_url: https://youtu.be/oTS7LB2ChK8
+project: caje
 ---
 
 Join us in this intense coding session recorded on August 30th 2023 where our host Corey takes his Rust skills up a notch.
