--- a/past_streams/2023-09-03.md
+++ b/past_streams/2023-09-03.md
@@ -2,6 +2,7 @@
 title: "Building a Caching CDN in Rust: Part 3 | Exploring Advanced Features"
 date: 2023-09-03
 youtube_url: https://youtu.be/lC7UnaqNxoY
+project: caje
 ---
 
 Join Corey in this productive coding session, recorded on September 1, 2023, as he makes significant progress in building a robust, caching Content Delivery Network (CDN) entirely in Rust. This stream is Part 3, where Corey successfully moves the cache from memory to a FileSystem and adds a SQLite Database for storing cache metadata.
