--- a/past_streams/2023-09-07.md
+++ b/past_streams/2023-09-07.md
@@ -2,6 +2,7 @@
 title: "Deploying a Rust CDN with LiteFS | Distributed SQLite Across Regions"
 date: 2023-09-07
 youtube_url: https://youtu.be/4bOl1QKaJaU
+project: caje
 ---
 
 In this live coding stream, I work on deploying a Rust CDN (content delivery network) using LiteFS to distribute an SQLite database across regions. We start by deploying an origin server to Paris using Fly.io. Then we deploy the CDN cache itself to regions in New Jersey and London, and connect it to the origin server in Paris.
