--- a/past_streams/2023-09-24.md
+++ b/past_streams/2023-09-24.md
@@ -2,6 +2,7 @@
 title: "Problem Solving with Rust: `caje` CDN Cacheing Project | Part 5"
 date: 2023-09-24
 youtube_url: https://youtu.be/wgt5AF9rv3s
+project: caje
 ---
 
 Unravel the mysteries of coding as Corey, aka coreyja online, dives back into his progressive journey of building a CDN caching project, all in Rust. Recorded on September 23, 2023, join him in this 5th installment as he tackles the implementation of the LiteFS Halt mechanism, complete with all the highs and lows it entails, from syscall errors to potential workarounds and making plans for next stream!
