--- a/past_streams/2023-10-02.md
+++ b/past_streams/2023-10-02.md
@@ -2,6 +2,7 @@
 title: "Exploring Filesystem Locks in Rust - CDN Project Continues Part 6"
 date: 2023-10-02
 youtube_url: https://youtu.be/vK4dKghjPPQ
+project: caje
 ---
 
 Join Corey and turn challenges into breakthroughs!
