--- a/past_streams/2023-10-16.md
+++ b/past_streams/2023-10-16.md
@@ -2,6 +2,7 @@
 title: "Exploring Rust: Creating and Debugging a CDN - Caje Part 7 | Coreyja live coding"
 date: 2023-10-16
 youtube_url: https://youtu.be/5VtPTA-Vtx0
+project: caje
 ---
 
 Join Corey in the seventh installment of his live coding series, recorded on October 15th, 2023 where he adds new features to his custom CDN project, Caje, developed solely in Rust.
