Add projects to lots of past streams

--- a/past_streams/2023-02-12.md
+++ b/past_streams/2023-02-12.md
@@ -3,6 +3,7 @@ title: "Battle Snake: Mastering Snail Mode and Stacked Hazards with Rust"
 date: 2023-02-12
 s3_url: "raw_recordings/2023/2023-02-12 12-17-57.mkv"
 youtube_url: "https://youtu.be/3BqBQSikPWE"
+project: battlesnake
 ---
 
 Join Coreyja in this exciting live stream as we delve deep into the world of Battle Snake. Recorded on February 12, 2023, this live stream takes you through the intricacies of snail mode games, 'fuzz tester' and how we can add hazards to it.
