--- a/past_streams/2023-04-12.md
+++ b/past_streams/2023-04-12.md
@@ -3,6 +3,7 @@ title: "Mastering Rust Live: Building a Personal Site with Corey"
 date: 2023-04-12
 s3_url: "raw_recordings/2023/2023-04-12 19-01-48.mkv"
 youtube_url: "https://youtu.be/LRFBBmKBVLY"
+project: coreyja
 ---
 
 Join Corey as he embarks on a Rust live coding journey on his personal site - updating the posts page, implementing 301redirects, and enhancing the site structure. Discussion on server-side analytics and caching also included. Recorded on 2023-04-12. Don't miss out on this chance to learn from coreyja!
