--- a/past_streams/2023-04-16.md
+++ b/past_streams/2023-04-16.md
@@ -3,6 +3,7 @@ title: "Live Coding a Battle Snakes Chat Bot in Rust | Coreyja's Rust Programmin
 date: 2023-04-16
 s3_url: "raw_recordings/2023/2023-04-16 12-01-25.mkv"
 youtube_url: "https://youtu.be/HLrXEyRaLNk"
+project: snake-gpt
 ---
 
 Join Coreyja on this live recorded coding session from April 16, 2023, as he dives into building a Battle Snakes chat bot using Rust. The stream starts with the introduction of the project, Snake GPT, which utilizes OpenAI embeddings to answer any Battle Snakes queries. Throughout the stream, you'll see a real-world implementation of Rust, creating both a back-end SQLite database and a front-end application using the U framework. You'll also dive into problem-solving as Corey navigates through different hurdles ranging from shell installation difficulties to complex API calls. All these while integrating Rust libraries such as Clap and trunk, and adding features and functionalities to the application's GUI. Whether you're a seasoned Rust programmer or just getting started, this stream offers valuable insights into the nitty-gritty of using Rust in a complex project. Don't miss out on this wholesome Rust programming experience!
