--- a/past_streams/2023-04-30.md
+++ b/past_streams/2023-04-30.md
@@ -3,6 +3,7 @@ title: "Riveting Rust: Building a Chatbot for Battle Snake | Live Coding Stream 
 date: 2023-04-30
 s3_url: "raw_recordings/2023/2023-04-30 12-02-57.mkv"
 youtube_url: "https://youtu.be/BYKImPq-5AI"
+project: snake-gpt
 ---
 
 Join Corey, known as coreyja online, in this engaging live coding stream recorded on April 30, 2023. Dive deep into the Rust programming language as he embarks on an ambitious project to build Snake GPT, a chatbot for the online programming game, Battle Snake.
