--- a/past_streams/2023-05-03.md
+++ b/past_streams/2023-05-03.md
@@ -3,6 +3,7 @@ title: "Revamping Websites & Validating Images with Rust | live coding session w
 date: 2023-05-03
 s3_url: "raw_recordings/2023/2023-05-03 19-04-07.mkv"
 youtube_url: "https://youtu.be/qSHNbnnkD_w"
+project: coreyja
 ---
 
 Join Corey as he dives deep into Rust, updating his personal website and demonstrating how to overcome common coding challenges.
