--- a/past_streams/2023-05-21.md
+++ b/past_streams/2023-05-21.md
@@ -3,6 +3,7 @@ title: "Advanced Rust Coding and Debugging: Snake GPT Chatbot for Battle Snake |
 date: 2023-05-21
 s3_url: "raw_recordings/2023/2023-05-21 12-01-42.mkv"
 youtube_url: "https://youtu.be/wPjfawUmZAQ"
+project: snake-gpt
 ---
 
 In this live stream recording from May 21, 2023, dive into advanced Rust development with Corey as he walks us through his latest project - Snake GPT, a Rust-driven chatbot for Battle Snake. Corey gives an in-depth explanation on how he uses semantic search and chat GPT to generate natural-language responses based on the Battle Snake documentation.
