--- a/past_streams/2023-06-28.md
+++ b/past_streams/2023-06-28.md
@@ -3,6 +3,7 @@ title: "Improving Blog Performance: Rust-Based Image Optimization and Caching | 
 date: 2023-06-28
 s3_url: "raw_recordings/2023/2023-06-28 19-04-33.mkv"
 youtube_url: "https://youtu.be/VxRRAHyvwT8"
+project: coreyja
 ---
 
 Join Coreyja as he demystifies the process of image optimization in Rust, implementing caching for improved blog performance. This engaging live stream was recorded on the 28th of June, 2023.
