--- a/past_streams/2023-07-12.md
+++ b/past_streams/2023-07-12.md
@@ -3,6 +3,7 @@ title: "Hands-On with Rust: OpenTelemetry Headers & Web Framework Exploration | 
 date: 2023-07-12
 s3_url: "raw_recordings/2023/2023-07-12 19-06-21.mkv"
 youtube_url: "https://youtu.be/LM7R3pmVa24"
+project: coreyja
 ---
 
 Join Corey for a deep-dive into real-time Rust coding, as he tackles crucial tasks for his blog development. Recorded on 12th July, 2023, Corey shares his processes for working on an interesting array of tasks including the creation of his web framework, refining the outline for his newsletter, resizing images and fixing OpenTelemetry headers.
