--- a/past_streams/2023-08-23.md
+++ b/past_streams/2023-08-23.md
@@ -2,6 +2,7 @@
 title: "BYTE SPEAKS!! | Live Coding with coreyja | Voice Transcription and Bot Programming in Rust"
 date: 2023-08-23
 youtube_url: https://youtu.be/BUZ9ien9r2U
+project: byte
 ---
 
 Byte says Hello World! Watch till the end to see Byte respond to live chatter questions!
