--- a/past_streams/2023-08-27.md
+++ b/past_streams/2023-08-27.md
@@ -2,6 +2,7 @@
 title: "coreyja Live Stream | Coding an AI Chatbot in Rust! (ft. Whisper, ChatGPT, and More)"
 date: 2023-08-27
 youtube_url: https://youtu.be/EBmDL9ZYI_Y
+project: byte
 ---
 
 What's up coders! Join me, Corey, as I continue building my AI chatbot, Byte, in Rust! We ran into some pesky audio buffering issues with Whisper at first, but managed to squash those bugs and get Byte listening to me again.
