--- a/past_streams/2023-03-22.md
+++ b/past_streams/2023-03-22.md
@@ -3,6 +3,7 @@ title: "Mastering Distributed Systems in Rust: Fly.io Gossip Glomers Challenge -
 date: 2023-03-22
 s3_url: "raw_recordings/2023/2023-03-22 19-02-04.mkv"
 youtube_url: "https://youtu.be/6x6DNg41Lp4"
+project: gossip-glomers
 ---
 
 Description:
