--- a/past_streams/2023-04-26.md
+++ b/past_streams/2023-04-26.md
@@ -3,6 +3,7 @@ title: "Revamping a Website with Rust: Live Coding Session"
 date: 2023-04-26
 s3_url: "raw_recordings/2023/2023-04-26 19-00-27.mkv"
 youtube_url: "https://youtu.be/x-2DzUMLznk"
+project: coreyja
 ---
 
 Join Corey as he delves into Rust web development, overcoming obstacles and enhancing a blog and personal website. Recorded on April 26, 2023.
