--- a/past_streams/2023-06-07.md
+++ b/past_streams/2023-06-07.md
@@ -3,6 +3,7 @@ title: "Mastering Python and Rust: Fixing Battle Snake's Big Bug | Coreyja's Liv
 date: 2023-06-07
 s3_url: "raw_recordings/2023/2023-06-07 19-08-00.mkv"
 youtube_url: "https://youtu.be/v4tmvj2svCQ"
+project: battlesnake
 ---
 
 Description:
