--- a/past_streams/2023-08-13.md
+++ b/past_streams/2023-08-13.md
@@ -2,6 +2,7 @@
 title: "Building a Multifunctional Chatbot Using Rust: Debugging and Developing Live!"
 date: 2023-08-13
 youtube_url: "https://youtu.be/Os5tOHQS0DY"
+project: byte
 ---
 
 Join an interactive live stream session with Corey, where he works on building an advanced chatbot with a multitude of capabilities employing Rust. Recorded on 13th August 2023, this video follows Corey as he navigates through challenges in programming, dealing with bugs, and unraveling the nuts and bolts of Rust.
