Add more project tags to streams

--- a/past_streams/2022-08-21.md
+++ b/past_streams/2022-08-21.md
@@ -3,6 +3,7 @@ title: "Exploring Monte Carlo Algorithm with Rust | BattleSnake Gaming Live Stre
 date: 2022-08-21
 s3_url: "raw_recordings/2022/2022-08-21 12-04-16.mkv"
 youtube_url: https://youtu.be/DgcdlBUUT_E
+project: battlesnake
 ---
 
 Dive into the programming world of BattleSnake as Corey takes you through the intricacies of the Monte Carlo tree search algorithm, bridging gaming and coding on this live stream recorded on August 21, 2022. Corey, an experienced coder who goes by coreyja online, dissects the rules of the multiplayer online programming game, BattleSnake, and introduces the use of the Monte Carlo algorithm as an alternative to the Mini Max algorithm. With his main coding done in Rust and relevant insights from his own projects, Corey offers a deep-dive into coding for gaming, from the expansion and simulation of the algorithm to debugging and test case generation. Watch as we delve into the project, discuss potential improvements and optimizations, and even watch a few BattleSnake matches. Whether you're a coding veteran or a newbie, this will take your programming skills to a new level!
