--- a/past_streams/2022-10-23.md
+++ b/past_streams/2022-10-23.md
@@ -3,6 +3,7 @@ title: "Mastering Battle Snake: Debugging & Improving Monte Carlo Tree Search Al
 date: 2022-10-23
 s3_url: "raw_recordings/2022/2022-10-23 11-59-50.mkv"
 youtube_url: "https://youtu.be/fUulJhcEHGc"
+project: battlesnake
 ---
 
 Watch Corey's intense debugging session as he navigates through the coding challenges of a Monte Carlo tree search snake for the online multiplayer Battle Snake game. Recorded live on October 23, 2022, Corey dives deep into the analysis of game states, and unveils a bug in the selection of the best move for the snake. Experience the thrill of uncovering the unexpected twists and tweaks in the simulation logic. Participate in a hearty discussion about the Fall League's performance, and gear up for the amusement of the "worst possible snake". Witness Corey's resilient debugging efforts as he prunes hazardous moves leading to immediate losses, making this not just a game strategy but also a thrilling lesson in persistence. Don't miss out on the updates for future streams and Corey's plans to improve the Monte Carlo snake. Whether you're passionate about gaming, coding, or both, this video's got something exciting for you. Tune in now!
