--- a/past_streams/2022-11-20.md
+++ b/past_streams/2022-11-20.md
@@ -3,6 +3,7 @@ title: "Enhancing BattleSnake AI with State Memory: Rust Coding Session with Cor
 date: 2022-11-20
 s3_url: "raw_recordings/2022/2022-11-20 12-00-39.mkv"
 youtube_url: "https://youtu.be/Mn3lknxB1U8"
+project: battlesnake
 ---
 
 Join Corey as he ventures into another exciting coding session on this live stream recorded on November 20, 2022. Watch him work on BattleSnake, an online programming game where the goal is to maintain the last snake standing. Dive into the intricacies of Rust language as Corey revamps his snake called Hobbes, by adding a state feature to remember the last results for improved in-game performance. Engage in enthusiastic discussions about the upcoming Winter Championship tournament and contribute to the fun by dropping your ideas for custom heads and tails for Hobbes. Witness Corey troubleshoot routing and state implementation issues, program mutexes, and brainstorm solutions focusing on move ordering and transposition tables. Also, get a chance to interact with the coder himself over Haskell, font choices, and other user queries. Don't miss the climax where Corey wraps up with a commit announcement and a brief hiatus notice. Stay tuned for more exciting coding sessions!
