--- a/past_streams/2023-01-01.md
+++ b/past_streams/2023-01-01.md
@@ -3,6 +3,7 @@ title: "BattleSnake AI with Rust: Debugging & Enhancing Performance | coreyja Li
 date: 2023-01-01
 s3_url: "raw_recordings/2023/2023-01-01 12-01-20.mkv"
 youtube_url: "https://youtu.be/Xu9oOEOnkBw"
+project: battlesnake
 ---
 
 Join Corey on this live stream held on the 1st of January, 2023, as he delves into the intricate world of BattleSnake AI! Watch as Corey painstakingly curates and tunes his snake performance in BattleSnake, an enthralling online multiplayer game. Through Corey's insightful narration, come to understand the underlying mechanics of BattleSnake, and learn how to employ the Monte Carlo tree search algorithm effectively to boost your AI snake performance within the game.
