--- a/past_streams/2023-01-22.md
+++ b/past_streams/2023-01-22.md
@@ -3,6 +3,7 @@ title: "Unraveling Game Logic and Debugging with Rust | Epic Live Coding Session
 date: 2023-01-22
 s3_url: "raw_recordings/2023/2023-01-22 12-06-18.mkv"
 youtube_url: "https://youtu.be/2LatX6j2TSE"
+project: battlesnake
 ---
 
 Description:
