Add new stream and new moodboard project

--- a/past_streams/2023-10-26.md
+++ b/past_streams/2023-10-26.md
@@ -2,6 +2,7 @@
 title: "Part 1: Swipe Right with Rust and WASM to craft a frontend app from scratch | Live Coding Session"
 date: 2023-10-26
 youtube_url: https://youtu.be/sRtx9hFG07k
+project: moodboards
 ---
 
 🚀 Welcome to Part 1 of my journey into building a Mood Board App using Rust and WebAssembly! In this kick-off episode, I'm going to take you through the initial setup of the GitHub repo, lay down the Rust foundations, and get you acquainted with the magic of WebAssembly (WASM) for web development. 🧙‍♂️
