Add Halloween Game Project

--- a/past_streams/2023-10-29.md
+++ b/past_streams/2023-10-29.md
@@ -2,6 +2,7 @@
 title: "3-Hour Challenge Accepted! Insane Halloween Game Build with Bun—While Dressed as Jack Skellington!"
 date: 2023-10-29
 youtube_url: https://youtu.be/sk9SiIKkG_o
+project: halloween-adventure
 ---
 
 In this video, I code an entire playable Halloween-themed "choose your own adventure" game from scratch in just 3 hours - all while dressed up in a full Jack Skellington costume and makeup! 💀
