Link from streams to projects

--- a/past_streams/2023-11-12.md
+++ b/past_streams/2023-11-12.md
@@ -7,9 +7,11 @@ project: moodboards
 
 🔗 Connect with Me
 
-Twitch Stream: twitch.tv/coreyja
-Support My Work: github.com/sponsors/coreyja
-Project Repo: github.com/coreyja/moodboards
+Twitch Stream: <https://twitch.tv/coreyja>
+
+Support My Work: <https://github.com/sponsors/coreyja>
+
+Project Repo: <https://github.com/coreyja/moodboards>
 
 🚀 Stream Highlights
 In this engaging coding session, we tackled some exciting milestones for our MoodBoard app:
