Remove some permissions for youtube embed

--- a/til/2024-01-13T00:44:05Z.md
+++ b/til/2024-01-13T00:44:05Z.md
@@ -14,7 +14,7 @@ slug: video-from-screenshot-history
     src="https://www.youtube.com/embed/HYl7FL1PGQk"
     title="YouTube video player"
     frameborder="0"
-    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allow="picture-in-picture; web-share"
     allowfullscreen
     >
   </iframe>
