--- a/til/2024-01-06T13:22:23Z.md
+++ b/til/2024-01-06T13:22:23Z.md
@@ -16,7 +16,7 @@ Note: This is an older video I made for TikTok and never posted as a TIL so post
     src="https://www.youtube.com/embed/q3FRQSs5NGc"
     title="YouTube video player"
     frameborder="0"
-    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allow="picture-in-picture; web-share"
     allowfullscreen
     >
   </iframe>
