--- a/til/2024-08-21T09:46:32Z.md
+++ b/til/2024-08-21T09:46:32Z.md
@@ -1,6 +1,7 @@
 ---
 title: Easily use Github Avatars
 date: 2024-08-21
+slug: github-avatars
 ---
 
 tldr: You can use avatars from Github by adding `.png` to the end of a profile url. For instance this will show you my Github Avatar: `https://github.com/coreyja.png`
