--- a/til/2025-07-03T14:38:59Z.md
+++ b/til/2025-07-03T14:38:59Z.md
@@ -2,6 +2,7 @@
 title: sqlx Offline Mode for Tests
 date: 2025-07-03
 slug: sqlx-offline-mode-tests
+bsky_url: https://bsky.app/profile/coreyja.com/post/3lt5qrppadc2u
 ---
 
 I've been using `sqlx` as my main DB client in Rust for my personal projects.
@@ -18,7 +19,11 @@ generated.
 Running `cargo sqlx prepare --workspace --all` was NOT enough to get it to 'see' the
 test queries.
 
-The fix was to run `cargo sqlx prepare --workspace --all -- --all-targets`.
+The fix was to run the following
+```
+cargo sqlx prepare --workspace --all -- --all-targets
+```
+
 The `-- --all-targets` is the magic flag that sqlx passes to Cargo, and the `--all-targets`
 will build the tests and docs, as well as the main project.
 
